fixed alignment and sizing of image row

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -106,33 +106,37 @@ li {
 .imageRow {
     width: 95%;
     display: inline-block;
-    padding-bottom: 5%;
+    padding: 5% 10% 5% 15%;
 }
 
 .imageRowColumn1 {
-    width: 40%;
+    width: 48%;
     display: inline-block;
     text-align: center;
 }
 
 .imageRowColumn2 {
-    width: 30%;
+    width: 48%;
+    display: inline-block;
 }
 
 .innovationOnDemand {
     font-weight: bold;
     font-style: italic;
-    font-size: 40pt;
-    float: left;
+    font-size: 50pt;
+    padding-right: 5%;
+
     display: inline-block;
     word-spacing: 1000px; /* got help from https://stackoverflow.com/questions/4212909/can-css-force-a-line-break-after-each-word-in-an-element*/
 }
 
 
 .codePicture {
-    width: 30%;
+    width: 70%;
     display: inline-block;
-    float: right;
+    margin-right: 10%;
+    margin-left: 10%;
+
 }
 
 .middleSection {
